// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expect yaml import to be a json object 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	"use strict";
var __webpack_exports__ = {};
/* unused harmony default export */ var __WEBPACK_DEFAULT_EXPORT__ = ({"pluginDir":"./plugins","web":{"enabled":true},"logging":{"type":"stdout","level":"info"}});
/******/ })()
;"
`;

exports[`expect yaml import to be a string 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	"use strict";
var __webpack_exports__ = {};

;// CONCATENATED MODULE: ./_virtual_virtual%3Ayaml%3A%2FUsers%2Fluxass%2Fdev%2Funplugin-yaml%2Ftests%2Ffixtures%2Fyaml-config.yaml%3Araw
/* harmony default export */ const _virtual_virtual_3Ayaml_3A_2FUsers_2Fluxass_2Fdev_2Funplugin_yaml_2Ftests_2Ffixtures_2Fyaml_config_yaml_3Araw = ("pluginDir: ./plugins\\n\\nweb:\\n  enabled: true\\n\\nlogging:\\n  type: stdout\\n  level: info\\n");
;// CONCATENATED MODULE: ./tests/fixtures/js-yaml-raw.js


console.log(_virtual_virtual_3Ayaml_3A_2FUsers_2Fluxass_2Fdev_2Funplugin_yaml_2Ftests_2Ffixtures_2Fyaml_config_yaml_3Araw);

/******/ })()
;"
`;

exports[`expect yml import to be a json object 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	"use strict";
var __webpack_exports__ = {};
/* unused harmony default export */ var __WEBPACK_DEFAULT_EXPORT__ = ({"pluginDir":"./plugins","web":{"enabled":true},"logging":{"type":"stdout","level":"info"}});
/******/ })()
;"
`;

exports[`expect yml import to be a string 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	"use strict";
var __webpack_exports__ = {};

;// CONCATENATED MODULE: ./_virtual_virtual%3Ayaml%3A%2FUsers%2Fluxass%2Fdev%2Funplugin-yaml%2Ftests%2Ffixtures%2Fyml-config.yml%3Araw
/* harmony default export */ const _virtual_virtual_3Ayaml_3A_2FUsers_2Fluxass_2Fdev_2Funplugin_yaml_2Ftests_2Ffixtures_2Fyml_config_yml_3Araw = ("pluginDir: ./plugins\\n\\nweb:\\n  enabled: true\\n\\nlogging:\\n  type: stdout\\n  level: info\\n");
;// CONCATENATED MODULE: ./tests/fixtures/js-yml-raw.js


console.log(_virtual_virtual_3Ayaml_3A_2FUsers_2Fluxass_2Fdev_2Funplugin_yaml_2Ftests_2Ffixtures_2Fyml_config_yml_3Araw);

/******/ })()
;"
`;
